--- a/app-clientes/.env.example
+++ b/app-clientes/.env.example
@@ -1,6 +1,6 @@
 APP_NAME=Laravel
 APP_ENV=local
-APP_KEY=
+APP_KEY=base64:+N730Y95iOl6LSvmwqBUe0twJDoswF5pecvYNUm8Kao=
 APP_DEBUG=true
 APP_URL=http://localhost
 
@@ -10,7 +10,7 @@ LOG_LEVEL=debug
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
-DB_DATABASE=laravel
+DB_DATABASE=clientes
 DB_USERNAME=root
 DB_PASSWORD=
 
@@ -49,3 +49,6 @@ PUSHER_APP_CLUSTER=mt1
 
 MIX_PUSHER_APP_KEY="${PUSHER_APP_KEY}"
 MIX_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
+
+APP_REGISTRO_URL="http://localhost:8002/api/"
+APP_PRODUCTOS_URL="http://localhost:8001/api/"
